--- a/environment.yml
+++ b/environment.yml
@@ -120,7 +120,6 @@ dependencies:
   - tornado=6.4.1=py312h827c3e9_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - typing_extensions=4.11.0=py312haa95532_0
-  - tzdata=2024a=h04d1e81_0
   - urllib3=2.2.2=py312haa95532_0
   - vc=14.40=h2eaa2aa_1
   - vs2015_runtime=14.40.33807=h98bb1dd_1
@@ -136,13 +135,44 @@ dependencies:
   - zstd=1.5.5=hd43e919_2
   - pip:
       - accelerate==0.34.2
+      - annotated-types==0.7.0
+      - anyio==4.6.2.post1
+      - authlib==1.3.1
+      - cffi==1.17.1
+      - cryptography==43.0.1
+      - environs==9.5.0
       - fsspec==2024.9.0
+      - grpcio==1.66.2
+      - grpcio-health-checking==1.66.2
+      - grpcio-tools==1.66.2
+      - h11==0.14.0
+      - h2==4.1.0
+      - hpack==4.0.0
+      - httpcore==1.0.6
+      - httpx==0.27.0
       - huggingface-hub==0.25.1
+      - hyperframe==6.0.1
+      - marshmallow==3.22.0
+      - pandas==2.2.3
+      - portalocker==2.10.1
+      - protobuf==5.28.2
+      - pycparser==2.22
+      - pydantic==2.9.2
+      - pydantic-core==2.23.4
+      - pymilvus==2.4.8
+      - python-dotenv==1.0.1
+      - pytz==2024.2
+      - qdrant-client==1.12.0
       - regex==2024.9.11
       - safetensors==0.4.5
+      - sniffio==1.3.1
       - tokenizers==0.20.0
       - torchaudio==2.4.1
       - torchvision==0.19.1
       - tqdm==4.66.5
       - transformers==4.45.1
+      - tzdata==2024.2
+      - ujson==5.10.0
+      - validators==0.34.0
+      - weaviate-client==4.8.1
 prefix: C:\Users\Bogdan\.conda\envs\green_lm_inference
