--- a/environment.yml
+++ b/environment.yml
@@ -139,8 +139,11 @@ dependencies:
       - anyio==4.6.2.post1
       - authlib==1.3.1
       - cffi==1.17.1
+      - contourpy==1.3.0
       - cryptography==43.0.1
+      - cycler==0.12.1
       - environs==9.5.0
+      - fonttools==4.54.1
       - fsspec==2024.9.0
       - grpcio==1.66.2
       - grpcio-health-checking==1.66.2
@@ -152,7 +155,10 @@ dependencies:
       - httpx==0.27.0
       - huggingface-hub==0.25.1
       - hyperframe==6.0.1
+      - kiwisolver==1.4.7
       - marshmallow==3.22.0
+      - matplotlib==3.9.2
+      - ollama==0.3.3
       - pandas==2.2.3
       - portalocker==2.10.1
       - protobuf==5.28.2
@@ -160,11 +166,14 @@ dependencies:
       - pydantic==2.9.2
       - pydantic-core==2.23.4
       - pymilvus==2.4.8
+      - pyparsing==3.2.0
       - python-dotenv==1.0.1
       - pytz==2024.2
       - qdrant-client==1.12.0
       - regex==2024.9.11
       - safetensors==0.4.5
+      - scipy==1.14.1
+      - seaborn==0.13.2
       - sniffio==1.3.1
       - tokenizers==0.20.0
       - torchaudio==2.4.1
